✨(ng): Functional Grayscale Filter

--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -4,9 +4,9 @@
 
 <h2>Image to filter</h2>
 
-<img src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" alt="W3Schools.com" width="300" height="300">
+<img id="linnk" src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" alt="W3Schools.com" width="300" height="300">
 
-<button >Grayscale</button>
+<button (click)="grayScale()">Grayscale</button>
 <button >Sepia</button>
 
 </body>
