--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -4,10 +4,13 @@
 
 <h2>Image to filter</h2>
 
-<img id="linnk" src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" alt="W3Schools.com" width="300" height="300">
+<img id="imgLink" src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" alt="" width="300" height="300">
 
+<button (click)="original()">Original</button>
 <button (click)="grayScale()">Grayscale</button>
-<button >Sepia</button>
+<button (click)="sepia()">Sepia</button>
+<button (click)="contrast()">Contrast</button>
+<button (click)="hueRotate()">Hue Rotate</button>
 
 </body>
 </html>
