--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -3,9 +3,9 @@
 <body>
 
 <h2>Image to filter</h2>
-
+<div>
 <img id="imgLink" src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" alt="" width="300" height="300">
-
+</div>
 <button (click)="original()">Original</button>
 <button (click)="grayScale()">Grayscale</button>
 <button (click)="sepia()">Sepia</button>
