--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -23,8 +23,10 @@
                   </div>-->
                   <img mat-card-image id="uploadedImg" src={{displayImg}} alt="Photo of a Shiba Inu">
                 </div>
+                
         </mat-card-content>
+        <div class="error" *ngIf="error" style = "color:red;">{{error}}</div>
     <mat-card-actions>
-      <button  [disabled]="isDisabled">Upload</button>
+      <button  [disabled]="isDisabled" (click)="saveFiles()">Upload</button>
     </mat-card-actions>
   </mat-card>
