--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <body>
 
@@ -11,6 +11,244 @@
 <button (click)="sepia()">Sepia</button>
 <button (click)="contrast()">Contrast</button>
 <button (click)="hueRotate()">Hue Rotate</button>
+
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title></title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<style>
+body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
+body {font-size:16px;}
+.w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
+.w3-half img:hover{opacity:1}
+</style>
+</head>
+<body>
+
+<!-- Sidebar/menu -->
+<nav class="w3-sidebar w3-black w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
+  <div class="w3-container">
+    <h3 class="w3-padding-64"><b>Image<br>Converter</b></h3>
+  </div>
+  <div class="w3-bar-block">
+    <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
+    <a href="#imageUpload" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Image Upload</a> 
+    <a href="#imageFilters" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Image Filters</a> 
+    <a href="#conversionFormats" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Conversion Formats</a> 
+    <a href="#uploadHistory" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Upload History</a> 
+    <!-- <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Packages</a>  -->
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+  </div>
+</nav>
+
+<!-- Top menu on small screens -->
+<header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
+  <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
+  <span>Image Converter</span>
+</header>
+
+<!-- Overlay effect when opening sidebar on small screens -->
+<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+
+<!-- !PAGE CONTENT! -->
+<div class="w3-main" style="margin-left:340px;margin-right:40px">
+
+  <!-- Header -->
+  <div class="w3-container" style="margin-top:80px" id="home">
+    <!-- <h1 class="w3-jumbo"><b>Interior Design</b></h1> -->
+    <h1 class="w3-xxxlarge w3-text-black"><b>Home</b></h1>
+    <hr style="width:50px;border:5px solid black" class="w3-round">
+  </div>
+  
+  <!-- Photo grid (modal) -->
+  <div class="w3-row-padding">
+    <div class="w3-">
+      <p>With our current climate of easy access to information, we are faced with the problem of information overload. Therefore it is important 
+          that we are able to view data in a concise format. This will allow us to understand the data in a comprehensive manner without getting 
+          distracted by unnecessary information. Graphing is a way to counter the problem effectively. However, mismatched or unclear graphs fail to 
+          help us understand the data adequately. We intend to create a software solution that enables the standardization of graphs to solve this problem. 
+          The tool that we will build will convert the image of a graph into a standardized graph. By doing so, we will be able to easily interpret the data. 
+          It will also extract the function of the graph and display it to the user. The tool will support multiple graphing functions and graph representations.
+        </p>
+      
+    </div>
+
+
+  </div>
+
+
+  <!-- Image Upload -->
+  <div class="w3-container" id="imageUpload" style="margin-top:75px">
+    <h1 class="w3-xxxlarge w3-text-black"><b>Image Upload</b></h1>
+    <hr style="width:50px;border:5px solid black" class="w3-round">
+    
+  </div>
+  
+  <!-- Image Filters -->
+  <div class="w3-container" id="imageFilters" style="margin-top:75px">
+    <h1 class="w3-xxxlarge w3-text-black"><b>Image Filters</b></h1>
+    <hr style="width:50px;border:5px solid black" class="w3-round">
+
+      <div>
+      <img id="imgLink" src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" alt="" width="400" height="400">
+          
+        <button (click)="original()">Original</button>
+        <button (click)="grayScale()">Grayscale</button>
+        <button (click)="sepia()">Sepia</button>
+        <button (click)="contrast()">Contrast</button>
+        <button (click)="hueRotate()">Hue Rotate</button>
+      </div> 
+  </div>
+
+  <!-- Conversion Formats -->
+  <div class="w3-container" id="conversionFormats" style="margin-top:75px">
+    <h1 class="w3-xxxlarge w3-text-black"><b>Conversion Formats</b></h1>
+    <hr style="width:50px;border:5px solid black" class="w3-round">
+
+    <div class="w3-row w3-container">
+        <div class="w3-col s4  w3-center w3-padding-large">
+            <div class="w3-card-4" style="">
+                <header class="w3-container w3-blue">
+                  <h1>Convert to PNG</h1>
+                </header>
+            
+                <div class="w3-container">
+                  <p>Convert image to PNG format
+                  </p>
+                </div>
+            </div>
+        </div>
+        <div class="w3-col s4  w3-center w3-padding-large">
+            <div class="w3-card-4" style="">
+                <header class="w3-container w3-blue">
+                  <h1>Convert to JPG</h1>
+                </header>
+            
+                <div class="w3-container">
+                  <p>Convert image to JPG format</p>
+                </div>
+            </div>
+        </div>
+        <div class="w3-col s4  w3-center w3-padding-large">
+            <div class="w3-card-4" style="">
+                <header class="w3-container w3-blue">
+                  <h1>Convert to SVG</h1>
+                </header>
+            
+                <div class="w3-container">
+                  <p>Convert image to SVG format</p>
+                </div>
+            </div>
+        </div>
+      </div>
+      
+      
+  </div>
+
+
+<!-- Upload History-->
+    <div class="w3-container" id="uploadHistory" style="margin-top:75px">
+        <h1 class="w3-xxxlarge w3-text-black"><b>Upload History</b></h1>
+        <hr style="width:50px;border:5px solid black" class="w3-round">
+
+        <h1>Recent Uploads</h1>
+
+        <div class="w3-row w3-container">
+            <div class="w3-col s4  w3-center w3-padding-large">
+                <div class="w3-card-4" style="">
+                    <img src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" width="200" height="200">   
+                </div>
+            </div>
+            <div class="w3-col s4  w3-center w3-padding-large">
+                <div class="w3-card-4" style="">
+                    <img src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" width="200" height="200">   
+                </div>
+            </div>
+            <div class="w3-col s4  w3-center w3-padding-large">
+                <div class="w3-card-4" style="">
+                    <img src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" width="200" height="200">   
+                </div>
+            </div>
+          </div>
+
+
+          <div class="w3-row w3-container">
+            <div class="w3-col s4  w3-center w3-padding-large">
+                <div class="w3-card-4" style="">
+                    <img src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" width="200" height="200">   
+                </div>
+            </div>
+            <div class="w3-col s4  w3-center w3-padding-large">
+                <div class="w3-card-4" style="">
+                    <img src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" width="200" height="200">   
+                </div>
+            </div>
+            <div class="w3-col s4  w3-center w3-padding-large">
+                <div class="w3-card-4" style="">
+                    <img src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" width="200" height="200">   
+                </div>
+            </div>
+          </div>
+        
+    </div>
+  
+  
+  <!-- Contact -->
+  <div class="w3-container" id="contact" style="margin-top:75px">
+    <h1 class="w3-xxxlarge w3-text-black"><b>Contact.</b></h1>
+    <hr style="width:50px;border:5px solid black" class="w3-round">
+    <p>Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting new people!</p>
+    <form action="/action_page.php" target="_blank">
+      <div class="w3-section">
+        <label>Name</label>
+        <input class="w3-input w3-border" type="text" name="Name" required>
+      </div>
+      <div class="w3-section">
+        <label>Email</label>
+        <input class="w3-input w3-border" type="text" name="Email" required>
+      </div>
+      <div class="w3-section">
+        <label>Message</label>
+        <input class="w3-input w3-border" type="text" name="Message" required>
+      </div>
+      <button type="submit" class="w3-button w3-block w3-padding-large w3-black w3-margin-bottom">Send Message</button>
+    </form>  
+  </div>
+
+<!-- End page content -->
+</div>
+
+<!-- W3.CSS Container -->
+<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://github.com/COS301-SE-2022/Image-Converter" title="" target="_blank" class="w3-hover-opacity">Hardcode</a></p></div>
+
+<script>
+// Script to open and close sidebar
+function w3_open() {
+  document.getElementById("mySidebar").style.display = "block";
+  document.getElementById("myOverlay").style.display = "block";
+}
+ 
+function w3_close() {
+  document.getElementById("mySidebar").style.display = "none";
+  document.getElementById("myOverlay").style.display = "none";
+}
+
+// Modal Image Gallery
+function onClick(element) {
+  document.getElementById("img01").src = element.src;
+  document.getElementById("modal01").style.display = "block";
+  var captionText = document.getElementById("caption");
+  captionText.innerHTML = element.alt;
+}
+</script>
 
 </body>
 </html>
