✨(UI): New Mock Data

--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -169,12 +169,12 @@ body {font-size:16px;}
             </div>
             <div class="w3-col s4  w3-center w3-padding-large">
                 <div class="w3-card-4" style="">
-                    <img src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" width="200" height="200">   
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDWKrnj_rQPAWzEgbvIo7EcmomzTlRSSx01g&usqp=CAU" width="200" height="200">   
                 </div>
             </div>
             <div class="w3-col s4  w3-center w3-padding-large">
                 <div class="w3-card-4" style="">
-                    <img src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" width="200" height="200">   
+                    <img src="https://www.mathsisfun.com/data/images/line-graph-5.jpg" width="200" height="200">   
                 </div>
             </div>
           </div>
@@ -183,17 +183,17 @@ body {font-size:16px;}
           <div class="w3-row w3-container">
             <div class="w3-col s4  w3-center w3-padding-large">
                 <div class="w3-card-4" style="">
-                    <img src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" width="200" height="200">   
+                    <img src="https://www.investopedia.com/thmb/l99LoO5U2XuejN_gZFnyztChvD0=/2501x1730/filters:no_upscale():max_bytes(150000):strip_icc()/dotdash_INV_final-Risk-Graph_Feb_2021-01-18165326f1234caf9867113a52939850.jpg" width="200" height="200">   
                 </div>
             </div>
             <div class="w3-col s4  w3-center w3-padding-large">
                 <div class="w3-card-4" style="">
-                    <img src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" width="200" height="200">   
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTq-FW4H_L2U6voFW4UhJF5QtPWi_Y8r3aiVLZqPU7gVA1AXtVgdhH3txeu4ltjdfMe6wQ&usqp=CAU" width="200" height="200">   
                 </div>
             </div>
             <div class="w3-col s4  w3-center w3-padding-large">
                 <div class="w3-card-4" style="">
-                    <img src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" width="200" height="200">   
+                    <img src="https://www.mathworks.com/help/examples/graphics/win64/SingleDataSeriesExample_01.png" width="200" height="200">   
                 </div>
             </div>
           </div>
