--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -73,10 +73,14 @@ body {font-size:16px;}
     <div class="w3-">
       <p>With our current climate of easy access to information, we are faced with the problem of information overload. Therefore it is important 
           that we are able to view data in a concise format. This will allow us to understand the data in a comprehensive manner without getting 
-          distracted by unnecessary information. Graphing is a way to counter the problem effectively. However, mismatched or unclear graphs fail to 
-          help us understand the data adequately. We intend to create a software solution that enables the standardization of graphs to solve this problem. 
-          The tool that we will build will convert the image of a graph into a standardized graph. By doing so, we will be able to easily interpret the data. 
-          It will also extract the function of the graph and display it to the user. The tool will support multiple graphing functions and graph representations.
+          distracted by unnecessary information. 
+          <br>
+          <br>
+          Graphing is a way to counter the problem effectively. However, mismatched or unclear graphs fail to 
+          help us understand the data adequately. This tool enables the standardization of graphs to solve this problem. 
+          <br>
+          <br>
+          The Image converter hosts a variety of functions from analyzing graphs to outputting newly generated graph images.
         </p>
       
     </div>
