--- a/Front-End/Image-Converter/src/app/app.component.html
+++ b/Front-End/Image-Converter/src/app/app.component.html
@@ -1,22 +1,5 @@
 <router-outlet></router-outlet>
 
-<!-- <!DOCTYPE html>
-<html>
-<body>
-
-<h2>Image to filter</h2>
-<div>
-<img id="imgLink" src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" alt="" width="300" height="300">
-</div>
-<button (click)="original()">Original</button>
-<button (click)="grayScale()">Grayscale</button>
-<button (click)="sepia()">Sepia</button>
-<button (click)="contrast()">Contrast</button>
-<button (click)="hueRotate()">Hue Rotate</button>
-
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,14 +29,13 @@ body {font-size:16px;}
     <a href="#imageFilters" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Image Filters</a> 
     <a href="#conversionFormats" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Conversion Formats</a> 
     <a href="#uploadHistory" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Upload History</a> 
-    <!-- <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Packages</a>  -->
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
   </div>
 </nav>
 
 <!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
-  <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
+<header class="w3-container w3-top w3-hide-large w3-black w3-xlarge w3-padding">
+  <a href="javascript:void(0)" class="w3-button w3-black w3-margin-right" onclick="w3_open()">☰</a>
   <span>Image Converter</span>
 </header>
 
@@ -70,7 +52,6 @@ body {font-size:16px;}
     <hr style="width:50px;border:5px solid black" class="w3-round">
   </div>
   
-  <!-- Photo grid (modal) -->
   <div class="w3-row-padding">
     <div class="w3-">
       <p>With our current climate of easy access to information, we are faced with the problem of information overload. Therefore it is important 
@@ -95,7 +76,8 @@ body {font-size:16px;}
   <div class="w3-container" id="imageUpload" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-black"><b>Image Upload</b></h1>
     <hr style="width:50px;border:5px solid black" class="w3-round">
-    
+
+
   </div>
   
   <!-- Image Filters -->
@@ -235,13 +217,6 @@ function w3_close() {
   document.getElementById("myOverlay").style.display = "none";
 }
 
-// Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
 </script>
 
 </body>
