--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title></title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<style>
+body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
+body {font-size:16px;}
+.w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
+.w3-half img:hover{opacity:1}
+</style>
+</head>
+<body>
+  
   <!-- Image Filters -->
   <div class="w3-container" id="imageFilters" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-black"><b>Image Filters</b></h1>
@@ -26,3 +43,7 @@
           </div>
       </div> 
   </div>
+
+
+</body>
+</html>
