💄(UI): Styling for Download Button

--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -42,8 +42,11 @@ body {font-size:16px;}
             </div>
           </div>
       </div> 
+      <div class="w3-panel" style="width:15%">
+        <button class="w3-button w3-round w3-block w3-black" (click)="downloadFile('./../assets/purple.jpg')">Download</button>
+      </div>
   </div>
-  <button   (click)="downloadFile('./../assets/purple.jpg')">download</button>
+
 
 </body>
 </html>
