--- a/Front-End/Image-Converter/src/app/app.component.html
+++ b/Front-End/Image-Converter/src/app/app.component.html
@@ -78,7 +78,7 @@ body {font-size:16px;}
     <h1 class="w3-xxxlarge w3-text-black"><b>Image Upload</b></h1>
     <hr style="width:50px;border:5px solid black" class="w3-round">
 
-
+    <app-converter></app-converter>
   </div>
   
   <!-- Image Filters -->
