:construction: service changes

--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -21,7 +21,7 @@ body {font-size:16px;}
     <hr style="width:50px;border:5px solid black" class="w3-round">
       <div>  
         <div class="w3-container w3-cell">
-            <img id="imgLink" src="https://www.mindtools.com/media/Diagrams/Charts-and-Graphs-8.jpg" alt="" width="400" height="400">
+            <img id="imgLink" src="./../assets/purple.jpg" alt="" width="400" height="400">
           </div>
           
           <div class="w3-container w3-cell">
@@ -43,7 +43,7 @@ body {font-size:16px;}
           </div>
       </div> 
   </div>
-
+  <button   (click)="downloadFile('./../assets/purple.jpg')">download</button>
 
 </body>
 </html>
