--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -13,7 +13,7 @@ body {font-size:16px;}
 .w3-half img:hover{opacity:1}
 </style>
 </head>
-<body>
+<body *ngIf=dispBool>
   
   <!-- Image Filters -->
   <div class="w3-container" id="imageFilters" style="margin-top:75px">
