--- a/Front-End/Image-Converter/src/app/login/login.component.html
+++ b/Front-End/Image-Converter/src/app/login/login.component.html
@@ -1,12 +1,13 @@
-
+<!--
 <div id="loginForm">
+    <link href='https://fonts.googleapis.com/css?family=Didact Gothic' rel='stylesheet'>
     <h1 id="logo">Image converter</h1>
     <div id="formContent">
         <form  [formGroup]="form" (ngSubmit)="onSubmit()">
             <mat-form-field color="accent" class="field" appearance="outline" >
             <mat-label>email</mat-label>
             <input formControlName="username" matInput required>
-            <!-- mat-error is for validation -->
+             <!-- mat-error is for validation  
             <mat-error *ngIf="form.get('username')?.touched && form.get('username')?.invalid">
                 email is <strong>required</strong>
             </mat-error>
@@ -37,4 +38,64 @@
         </form>
         </div>
 </div>
+-->
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  
+    <title></title>
+ 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Didact Gothic' rel='stylesheet'>
+
+
+</head>
+<body>
+    <div id="loginForm">
+        <div id="formContent">
+            <div class="background">
+                <div class="shape"></div>
+                <div class="shape"></div>
+            </div>
+            <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                <h3 id="logo">Image Converter <br>
+                    Login</h3>
+                
+                    <label for="Email">Username</label>
+                    <input formControlName="username" placeholder="Email" matInput required>
+                    <!-- mat-error is for validation  -->
+                     <mat-error *ngIf="form.get('username')?.touched && form.get('username')?.invalid"> 
+                email is <strong>required</strong>
+                    </mat-error> 
+               
+                <label for="password">Password</label>
+                <input id="pword"formControlName="password" placeholder="Password" matInput required [type]="hide ? 'password' : 'text'">
+                <mat-error *ngIf="form.get('password')?.touched && form.get('password')?.invalid">
+                    Password is <strong>required</strong>
+                </mat-error>  
+                <a href="#" id="forgot">Forgot your password?</a>
+                
+  
+                <button id="loginbtn" [disabled]="form.get('username')?.invalid || form.get('password')?.invalid" type="submit">Log In</button>
+                <p *ngIf="buttonLogin != '' && !_match" class="alert alert-danger"> 
+                    Invalid Username or Password !              
+                    </p> 
+
+                <p id="accountLink">Don't have an account? <a id="registerlink" href="#"  (click)="register()">register</a></p> 
+
+                
+            </form>
+        </div>
+    </div>
+</body>
+</html>
 
