--- a/Front-End/Image-Converter/src/app/login/login.component.scss
+++ b/Front-End/Image-Converter/src/app/login/login.component.scss
@@ -1,41 +1,173 @@
-#logo{
+
+
+// #loginForm{
+//     margin-top:3%;
+//     margin-left: auto;
+//     margin-right: auto;
+//     width:50%;
+// }
+
+// .field{
+//     width:50%;
+//     font-size: 18px;
+// }
+// #formContent{
+//    width: 100%;
+//     margin-left: 25%;
+//     margin-right: 25%;
+    
+// }
+// #loginbtn{
+//     margin-top:3%;
+//     width:50%;
+//   }
+// #forgot{
+// position: relative;
+// right:-15% !important;
+// margin-bottom: 5%;
+// }
+
+// #registerlink{
+//     color:rgb(0, 140, 255);
+// }
+// .example-card {
+//     max-width: 70%;
+//     margin-left: auto;
+//     margin-right: auto;
+//   }
+  
+
+
+
+  *,
+  *:before,
+  *:after{
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+  }
+  body{
+      background-color: #080710;
+  }
+  .background{
+      width: 430px;
+      height: 520px;
+      position: absolute;
+      transform: translate(-50%,-50%);
+      left: 50%;
+      top: 50%;
+
+
+      
+  }
+  .background .shape{
+      height: 200px;
+      width: 200px;
+      position: absolute;
+      border-radius: 50%;
+  }
+  .shape:first-child{
+      background: linear-gradient(
+        #ff2fee,
+        #4819f0
+      );
+      left: -80px;
+      top: -80px;
+  }
+  .shape:last-child{
+    
+    background: linear-gradient(
+          to right,
+          #0e049e,
+          #56f019
+      );
+      right: -30px;
+      bottom: -80px;
+  }
+  form{
+      height: 540px;
+      width: 400px;
+      background-color: rgba(255,255,255,0.13);
+      position: absolute;
+      transform: translate(-50%,-50%);
+      top: 50%;
+      left: 50%;
+      border-radius: 10px;
+      backdrop-filter: blur(10px);
+      border: 2px solid rgba(255,255,255,0.1);
+      box-shadow: 0 0 40px rgba(8,7,16,0.6);
+      padding: 50px 35px;
+  }
+  form *{
+      font-family: 'Poppins',sans-serif;
+      color: #ffffff;
+      letter-spacing: 0.5px;
+      outline: none;
+      border: none;
+  }
+  form h3{
+      font-size: 32px;
+      font-weight: 500;
+      line-height: 42px;
+      text-align: center;
+  }
+
+  #logo{
     text-align: center;
     margin-bottom: 5%;
-}
+    font-family: 'Didact Gothic';font-size: 42px;
+    font-weight: bold;
 
-#loginForm{
-    margin-top:3%;
-    margin-left: auto;
-    margin-right: auto;
-    width:50%;
 }
-
-.field{
-    width:50%;
-    font-size: 18px;
-}
-#formContent{
-   width: 100%;
-    margin-left: 25%;
-    margin-right: 25%;
-    
-}
-#loginbtn{
-    margin-top:3%;
-    width:50%;
+  
+  label{
+      display: block;
+      margin-top: 30px;
+      font-size: 16px;
+      font-weight: 500;
   }
-#forgot{
-position: relative;
-right:-15% !important;
-margin-bottom: 5%;
-}
+  input{
+      display: block;
+      height: 50px;
+      width: 100%;
+      background-color: rgba(255,255,255,0.07);
+      border-radius: 3px;
+      padding: 0 10px;
+      margin-top: 8px;
+      font-size: 14px;
+      font-weight: 300;
 
-#registerlink{
-    color:rgb(0, 140, 255);
-}
-.example-card {
-    max-width: 70%;
-    margin-left: auto;
-    margin-right: auto;
+      #pword{
+        margin-left: -30px; 
+        cursor: pointer;
+      }
+  }
+  ::placeholder{
+      color: #e5e5e5;
+  }
+  button{
+      margin-top: 50px;
+      width: 100%;
+      background-color: #ffffff;
+      padding: 15px 0;
+      font-size: 18px;
+      font-weight: 600;
+      border-radius: 5px;
+      cursor: pointer;
+  }
+  #loginbtn{
+      color:#080710;
   }
   
+  #forgot{
+    font-family: 'Abel';font-size: 16px;
+  }
+  #accountLink{
+    font-family: 'Abel';font-size: 16px;
+
+  }
+#registerlink{
+    font-family: 'Abel';font-size: 16px;
+
+}
+
