--- a/Front-End/Image-Converter/src/app/register/register.component.html
+++ b/Front-End/Image-Converter/src/app/register/register.component.html
@@ -6,24 +6,44 @@
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
               <div class="mb-3">
                 <label for="registerUsername" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" formControlName="name" placeholder="Enter Name">
-                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                <input type="text" class="form-control" id="name" formControlName="name" class ="form-control is-invalid" placeholder="Enter Name">
+                <div class="invalid-feedback">
+                  Username Required
+                </div>
+
               </div>
   
               <div class="mb-3">
                 <label for="Surname" class="form-label">Surname</label>
-                <input type="text" class="form-control" id="surname" formControlName="surname" placeholder="Enter Surame">
-                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                <input type="text" class="form-control" id="surname" formControlName="surname" class ="form-control is-invalid" placeholder="Enter Surame">
+                <div class="invalid-feedback" >
+                  
+                  Surname Required
+                </div>
               </div>
   
               <div class="mb-3">
                 <label for="registerEmail" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" formControlName="email" placeholder="Enter email">
+                <input type="email" class="form-control" id="email" formControlName="email" class ="form-control is-invalid"  placeholder="Enter email">
+                <div class="invalid-feedback">
+                  Email Required
+                </div>
               </div>
   
               <div class="mb-3">
                   <label for="registerPassword" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="registerPassword" formControlName="password" placeholder="Password">
+                  <input type="password" class="form-control" id="registerPassword" formControlName="password" class ="form-control is-invalid" placeholder="Password">
+                  <div class="invalid-feedback">
+                    Password Required
+                  </div>
+                </div>
+
+                <div class="mb-3">
+                  <label for="confirmPassword" class="form-label">Confirm Password</label>
+                  <input type="password" class="form-control" id="confirmPassword" formControlName="confirmPassword" class ="form-control is-invalid" placeholder="Confirm Password">
+                  <div class="invalid-feedback">
+                    Passwords Don't Match
+                  </div>
                 </div>
   
               <button type="submit" class="btn btn-primary" [disabled]="form.get('username')?.invalid || form.get('password')?.invalid" type="submit">Register<i class="fas fa-sign-in-alt"></i></button>
@@ -31,3 +51,4 @@
       </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  <script src = "bootstrap-validate.js"></script>
