--- a/Front-End/Image-Converter/src/app/register/register.component.html
+++ b/Front-End/Image-Converter/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
       <div class="col-md-6 offset-md-3 mt-4">
@@ -51,4 +51,73 @@
       </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  <script src = "bootstrap-validate.js"></script>
+  <script src = "bootstrap-validate.js"></script> -->
+
+
+
+  <div class="row">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <div class="col-md-6 offset-md-3">
+      <h2>New User Register</h2>
+        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+          <div class="form-group">
+              <label>First Name</label>
+              <input type="text" formControlName= "name" class="form-control" [ngClass]="{ 'is-invalid': submitted && registerForm.controls.name.errors }" />
+                  <div *ngIf="submitted && registerForm.controls.name.errors" class="text-danger">
+                  <div *ngIf="registerForm.controls.name.errors.required">First Name is required</div>
+                  <div *ngIf="registerForm.controls.name.errors.minlength">First Name must be at least 2 characters</div>
+                </div>
+        </div>
+
+    <div class="form-group">
+        <label>Last Name</label>
+        <input type="text" formControlName="surname" class="form-control" [ngClass]="{ 'is-invalid': submitted && registerForm.controls.surname.errors }" />
+        <div *ngIf="submitted && registerForm.controls.surname.errors" class="text-danger">
+              <div *ngIf="registerForm.controls.surname.errors.required">Last Name is required</div>
+              <div *ngIf="registerForm.controls.surname.errors.minlength">Last Name must be at least 2 characters</div>
+        </div>
+    </div>
+
+
+    <div class="form-group">
+              <label>Email</label>
+                  <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && registerForm.controls.email.errors }" />
+                      <div *ngIf="submitted && registerForm.controls.email.errors" class="text-danger">
+                        <div *ngIf="registerForm.controls.email.errors.required">Email is required</div>
+                         <div *ngIf="registerForm.controls.email.errors.email">Email must be a valid email address</div>
+                      </div>
+    </div>
+
+
+    <div class="form-group">
+      <label>Password</label>
+          <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && registerForm.controls.password.errors }"  />
+          <div *ngIf="submitted && registerForm.controls.password.errors" class="text-danger">
+            <div *ngIf="registerForm.controls.password.errors.required">Password is required</div>
+                   <div *ngIf="registerForm.controls.password.errors.minlength">Password must be at least 8 characters</div>
+          </div>
+    </div>
+
+    <div class="form-group">
+      <label>Confirm Password</label>
+          <input type="password" formControlName="cpassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && registerForm.controls.cpassword.errors }"  />
+          <div *ngIf="submitted && registerForm.controls.cpassword.errors" class="text-danger">
+            <div *ngIf="registerForm.controls.cpassword.errors.required">Enter password again</div>
+            <div *ngIf="registerForm.controls.cpassword.errors.minlength">Password must be at least 8 characters</div>
+            <div *ngIf="registerForm.controls.cpassword.errors.MustMatch">Password entered is not the same</div>
+            <!-- <div *ngIf="registerForm.controls.cpassword.errors.required">Enter password again</div> -->
+                   
+          </div>
+    </div>
+
+
+          <div class="form-group">
+              <button class="btn btn-primary">Register</button>
+          </div>
+  </form>
+  </div>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    
