--- a/Front-End/Image-Converter/src/app/register/register.component.html
+++ b/Front-End/Image-Converter/src/app/register/register.component.html
@@ -127,7 +127,7 @@
   </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
-    
+     
 
 
 
@@ -159,7 +159,7 @@
                     <div class="shape"></div>
                     <div class="shape"></div>
                 </div>
-                <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                     <table>
                         
                             <h3 id="logo">Register</h3>
@@ -216,9 +216,9 @@
                         </tr>                    
                         
                     </table> 
-                    
-                    <button id="loginbtn" [disabled]="form.get('username')?.invalid || form.get('password')?.invalid" type="submit">Register</button>
-                            
+                    <div class="form-group">
+                      <button id="loginbtn" class="btn btn-primary">Register</button>
+                  </div>       
                 </form>
             </div>
         </div>
