input validation formatting change

--- a/Front-End/Image-Converter/src/app/login/login.component.html
+++ b/Front-End/Image-Converter/src/app/login/login.component.html
@@ -90,7 +90,7 @@
                     Invalid Username or Password !              
                     </p> 
 
-                <p id="accountLink">Don't have an account? <a id="registerlink" href="#"  (click)="register()">register</a></p> 
+                <p id="accountLink">Don't have an account? <a routerLink="/register"  (click)="register()">register</a></p> 
 
                 
             </form>
