--- a/Front-End/Image-Converter/src/app/image-popup/image-popup.component.html
+++ b/Front-End/Image-Converter/src/app/image-popup/image-popup.component.html
@@ -1,1 +1,8 @@
-<p>image-popup works!</p>
+<div>
+    <div>
+        <img [src]="imageUrl" id="popupImg" alt="img" /><br />
+    </div>
+    <div>
+        <button class="w3-button w3-round w3-block w3-black" (click)="downloadFile()">Download</button>
+    </div>
+</div>
