--- a/Front-End/Image-Converter/src/app/upload-history/upload-history.component.html
+++ b/Front-End/Image-Converter/src/app/upload-history/upload-history.component.html
@@ -3,7 +3,8 @@
     <hr style="width:50px;border:5px solid black" class="w3-round">
 
     <h1>Recent Uploads</h1>
-    <div>
+    <img *ngIf="loading" src="assets/loading.gif" width="400" />
+    <div *ngIf="!loading">
       <mat-grid-list cols="2" rowHeight="4:1" *ngFor="let image of uploadedImg;let pImage of uploadedImgProcessed;index as i;" >
         <mat-grid-tile id="uploaded">
             <button (click)="imageClick(i,'uploaded')">
