--- a/Front-End/Image-Converter/src/app/side-bar/side-bar.component.html
+++ b/Front-End/Image-Converter/src/app/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="w3-sidebar w3-black w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
+<!-- <nav class="w3-sidebar w3-black w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
     <div class="w3-container">
       <h3 class="w3-padding-64"><b>Image<br>Converter</b></h3>
@@ -11,4 +11,4 @@
       <a href="#uploadHistory" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Upload History</a> 
       <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
     </div>
-  </nav>
+  </nav> -->
