💄(UI): Removed Image Filter

--- a/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
+++ b/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@ body {font-size:16px;}
     <div class="w3-bar-block">
       <a (click)="toHome()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
       <a (click)="toImageUpload()"  class="w3-bar-item w3-button w3-hover-white">Image Upload</a> 
-      <a (click)="toImageFilter()" class="w3-bar-item w3-button w3-hover-white">Image Filters</a> 
+      <!-- <a (click)="toImageFilter()" class="w3-bar-item w3-button w3-hover-white">Image Filters</a>  -->
       <a (click)="toConversionFormat()"  class="w3-bar-item w3-button w3-hover-white">Conversion Formats</a> 
       <a (click)="toUploadHistory()"  class="w3-bar-item w3-button w3-hover-white">Upload History</a> 
       <a (click)="toContact()"  class="w3-bar-item w3-button w3-hover-white">Contact</a>
